# docs/swagger.json
@@ -2246,9 +2246,9 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Обновляет имя пользователя, аватар или статус",
+                "description": "Обновляет имя, био и аватар пользователя одним multipart-запросом",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -2256,16 +2256,25 @@
                 "tags": [
                     "profile"
                 ],
-                "summary": "Обновить профиль",
+                "summary": "Обновить профиль с аватаркой",
                 "parameters": [
                     {
-                        "description": "Новые данные профиля",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.UpdateProfileRequest"
-                        }
+                        "type": "string",
+                        "description": "Новое имя пользователя",
+                        "name": "username",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Описание профиля",
+                        "name": "bio",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Аватарка пользователя",
+                        "name": "avatar",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -2279,7 +2288,7 @@
                         }
                     },
                     "400": {
-                        "description": "error: Некорректные данные профиля",
+                        "description": "error: Неверные данные",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -3911,24 +3920,6 @@
             "properties": {
                 "content": {
                     "type": "string"
-                }
-            }
-        },
-        "dto.UpdateProfileRequest": {
-            "type": "object",
-            "properties": {
-                "avatar_url": {
-                    "type": "string"
-                },
-                "bio": {
-                    "description": "необязательное описание",
-                    "type": "string",
-                    "maxLength": 160
-                },
-                "username": {
-                    "type": "string",
-                    "maxLength": 30,
-                    "minLength": 3
                 }
             }
         },
